--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 700323617694679074
 textchannel = 700323617694679073
 ladderchannel = 
 jungsanchannel = 
