--- a/boss.ini
+++ b/boss.ini
@@ -1,175 +1,150 @@
 ----- 일반보스 -----
-bossname = 기감
-gentime = 01:00
+bossname = 트로이카
+gentime = 03:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 거드
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 이프
-gentime = 02:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 마요
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 피닉
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 대흑
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 서드
-gentime = 02:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 북드
-gentime = 02:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 중드
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 동드
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 아르
-gentime = 04:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 자크
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 카파
-gentime = 02:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 웜
-gentime = 02:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 데스
-gentime = 09:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 커츠
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 녹샤
-gentime = 02:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 빨샤
-gentime = 02:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 산두
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 에자
-gentime = 05:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 스피
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 개미
-gentime = 03:30
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 도펠
+bossname = 벨프스
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 감데
-gentime = 06:00
+bossname = 이프리나
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 베네딕트
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 1라빌린
+gentime = 04:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 1라파커스
+gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 대장로
-gentime = 03:00
+bossname = 1베르키
+gentime = 03:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 1피코
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2라빌린
+gentime = 04:10
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 베리스
-gentime = 03:00
+bossname = 2라파커스
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2베르키
+gentime = 03:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2피코
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 1렌티
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 1리비에
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 1바르돌
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 1에르드
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2렌티
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2리비에
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2바르돌
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2에르드
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 페리라
+gentime = 08:10
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 마프르만
+gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 케레
-gentime = 03:00
+bossname = 라카탄
+gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 가스트
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 리칸트
+bossname = 세르마
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
+bossname = 도그록
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
