--- a/boss.ini
+++ b/boss.ini
@@ -1,23 +1,71 @@
 ----- 일반보스 -----
-bossname = 트로이카
+bossname = 1트로이카
 gentime = 03:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 벨프스
+bossname = 1벨프스
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 이프리나
+bossname = 1이프리나
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 베네딕트
+bossname = 1베네딕트
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2트로이카
+gentime = 03:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2벨프스
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2이프리나
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2베네딕트
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3트로이카
+gentime = 03:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3벨프스
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3이프리나
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3베네딕트
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -71,6 +119,30 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
+bossname = 3라빌린
+gentime = 04:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3라파커스
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3베르키
+gentime = 03:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3피코
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
 bossname = 1렌티
 gentime = 07:50
 nogencheck = 0
@@ -119,31 +191,175 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 페리라
+bossname = 3렌티
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3리비에
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3바르돌
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3에르드
+gentime = 07:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 1페리라
 gentime = 08:10
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 마프르만
+bossname = 1마프르만
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 라카탄
+bossname = 1라카탄
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 세르마
+bossname = 1셰르마
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 도그록
+bossname = 1도그록
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2페리라
+gentime = 08:10
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2마프르만
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2라카탄
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2셰르마
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 2도그록
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3페리라
+gentime = 08:10
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3마프르만
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3라카탄
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3셰르마
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 3도그록
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 4페리라
+gentime = 08:10
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 4마프르만
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 4라카탄
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 4셰르마
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 4도그록
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 5페리라
+gentime = 08:10
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 5마프르만
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 5라카탄
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 5셰르마
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 5도그록
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
