--- a/boss.ini
+++ b/boss.ini
@@ -1,317 +1,365 @@
 ----- 일반보스 -----
-bossname = 1트로이카
+bossname = 트로이카1섭
 gentime = 03:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1벨프스
+bossname = 벨프스1섭
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1이프리나
+bossname = 이프리나1섭
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1베네딕트
+bossname = 베네딕트1섭
 gentime = 04:10
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2트로이카
+bossname = 트로이카2섭
 gentime = 03:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2벨프스
+bossname = 벨프스2섭
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2이프리나
+bossname = 이프리나2섭
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2베네딕트
+bossname = 베네딕트2섭
 gentime = 04:10
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3트로이카
+bossname = 트로이카3섭
 gentime = 03:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3벨프스
+bossname = 벨프스3섭
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3이프리나
+bossname = 이프리나3섭
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3베네딕트
+bossname = 베네딕트3섭
 gentime = 04:10
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1라빌린
-gentime = 04:10
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 1라파커스
-gentime = 04:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 1베르키
+bossname = 트로이카4섭
 gentime = 03:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1피코
+bossname = 벨프스4섭
 gentime = 04:00
-nogencheck = 0
+nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2라빌린
+bossname = 이프리나4섭
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 베네딕트4섭
 gentime = 04:10
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2라파커스
-gentime = 04:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 2베르키
+bossname = 트로이카5섭
 gentime = 03:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2피코
+bossname = 벨프스5섭
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 이프리나5섭
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 베네딕트5섭
+gentime = 04:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 라빌린1채
+gentime = 04:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 라파커스1채
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1렌티
+bossname = 베르키1채
+gentime = 03:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 피코1채
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 라빌린2채
+gentime = 04:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 라파커스2채
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 베르키2채
+gentime = 03:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 피코2채
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 렌티1채
 gentime = 07:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1리비에
+bossname = 리비에1채
 gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1바르돌
+bossname = 바르돌1채
 gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1에르드
+bossname = 에르드1채
 gentime = 07:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2렌티
+bossname = 렌티2채
 gentime = 07:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2리비에
+bossname = 리비에2채
 gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2바르돌
+bossname = 바르돌2채
 gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2에르드
+bossname = 에르드2채
 gentime = 07:50
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1페리라
+bossname = 페리라1섭
 gentime = 08:10
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1마프르만
+bossname = 마프르만1섭
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1라카탄
+bossname = 라카탄1섭
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1셰르마
+bossname = 셰르마1섭
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 1도그록
+bossname = 도그록1섭
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2페리라
+bossname = 페리라2섭
 gentime = 08:10
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2마프르만
+bossname = 마프르만2섭
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2라카탄
+bossname = 라카탄2섭
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2셰르마
+bossname = 셰르마2섭
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 2도그록
+bossname = 도그록2섭
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3페리라
+bossname = 페리라3섭
 gentime = 08:10
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3마프르만
+bossname = 마프르만3섭
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3라카탄
+bossname = 라카탄3섭
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3셰르마
+bossname = 셰르마3섭
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3도그록
+bossname = 도그록3섭
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 4페리라
+bossname = 페리라4섭
 gentime = 08:10
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 4마프르만
+bossname = 마프르만4섭
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 4라카탄
+bossname = 라카탄4섭
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 4셰르마
+bossname = 셰르마4섭
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 4도그록
+bossname = 도그록4섭
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 5페리라
+bossname = 페리라5섭
 gentime = 08:10
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 5마프르만
+bossname = 마프르만5섭
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 5라카탄
+bossname = 라카탄5섭
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 5셰르마
+bossname = 셰르마5섭
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 5도그록
+bossname = 도그록5섭
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
