--- a/boss.ini
+++ b/boss.ini
@@ -364,3 +364,21 @@ gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
+
+bossname = 두크라스
+gentime = 07:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 벨프스
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 케만
+gentime = 08:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
