--- a/boss.ini
+++ b/boss.ini
@@ -167,6 +167,30 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
+bossname = 라빌린3채
+gentime = 04:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 라파커스3채
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 베르키3채
+gentime = 03:50
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 피코3채
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
 bossname = 렌티1채
 gentime = 07:50
 nogencheck = 0
