--- a/boss.ini
+++ b/boss.ini
@@ -491,25 +491,121 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 볼피
+bossname = 볼피1섭
 gentime = 14:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 기셀라
+bossname = 기셀라1섭
 gentime = 14:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 팬서
+bossname = 팬서1섭
 gentime = 14:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 오르카
+bossname = 오르카1섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 볼피2섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 기셀라2섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 팬서2섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 오르카2섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 볼피3섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 기셀라3섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 팬서3섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 오르카3섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 볼피4섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 기셀라4섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 팬서4섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 오르카4섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 볼피5섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 기셀라5섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 팬서5섭
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 오르카5섭
 gentime = 14:00
 nogencheck = 1
 before_alert_ment = 입니다
